# DataMining2026PCALabData

./: .gitignore  PCR_Lab_EDA.ipynb  PCR_Lab_Verify.ipynb  README.md  TASK.md  analysis.md  pcr_cases.parquet  pcr_events_biz.parquet  pyproject.toml  requirements.txt
data/processed/: pcr_cases.parquet  pcr_events_biz.parquet  pcr_events_rich.parquet
notebooks/: 00_etl.ipynb  01_m1_eda.ipynb  02_m2_endpoint_clustering.ipynb  02_m2_event_clustering.ipynb  03_m3_process_discovery.ipynb
reports/: swiatek_mezyk_skowron_PCR_milestone2.md  swiatek_mezyk_skowron_PCR_milestone3.md  świątek_mężyk_skowron_PCR_milestone1.md
results/m3/: dashboard.html
scripts/: build_rich_events.py  check_m1_fixes.py  generate_m3_notebook.py
