[project]
name = "pcr-lab-data"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[tool.uv]
package = false
